# mdbook-mermaid

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  clippy.toml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: autofix.yml  ci.yml  deploy.yml  tests.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
payload/: index.html
src/: lib.rs  main.rs  renderer.rs
tests/: integration.rs
tests/fixtures/test-book/: book.toml
tests/fixtures/test-book/book/: 404.html  chapter_with_mermaid.html  chapter_without_mermaid.html  index.html  intro.html  print.html  searcher-c2a407aa.js  searchindex-29715548.js  toc-96ecbecd.js  toc.html
tests/fixtures/test-book/src/: SUMMARY.md  chapter_with_mermaid.md  chapter_without_mermaid.md  intro.md
tests/it/: empty.toml  empty.toml.output  full.toml.output  install.rs  main.rs  missing-js.toml  missing-js.toml.output  some.toml.output
tests/snapshots/: integration__chapter_with_mermaid_html.snap  integration__chapter_with_mermaid_html.snap.new  integration__chapter_without_mermaid_html.snap
xtask/: Cargo.toml
xtask/src/: main.rs
