[package]
name = "mdbook-mermaid"
version = "0.17.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
description = "mdbook preprocessor to add mermaid support"
license = "MPL-2.0"
homepage = "https://github.com/badboy/mdbook-mermaid"
repository = "https://github.com/badboy/mdbook-mermaid"
edition = "2018"

[dependencies]
mdbook-preprocessor = "0.5.0"
pulldown-cmark = { version = "0.10.0", default-features = false }
env_logger = "0.11.8"
log = "0.4.11"
clap = { version = "4.0.29", features = ["cargo"] }
serde_json = "1.0.57"
toml_edit = { version = "0.15.0", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.0"
pretty_assertions = "1.4.0"
tempfile = "3.3.0"

[workspace]
members = [".", "xtask"]
