[package]
name = "mdbook-mermaid-ssr"
version = "0.1.0"
authors = ["Frank Elsinga <frank.elsinga@tum.de>", "Jan-Erik Rediger <janerik@fnordig.de>"]
description = "mdbook preprocessor to add mermaid support with server-side rendering"
license = "MPL-2.0"
homepage = "https://github.com/CommanderStorm/mdbook-mermaid-ssr"
repository = "https://github.com/CommanderStorm/mdbook-mermaid-ssr"
edition = "2024"

[[bin]]
name = "mdbook-mermaid-ssr"
path = "src/bin/mdbook-mermaid-ssr.rs"

[dependencies]
mdbook-preprocessor = "0.5.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
env_logger = "0.11.8"
log = "0.4.11"
clap = { version = "4.0.29", features = ["cargo", "derive"] }
serde_json = "1.0.57"
toml = "0.9"
headless_chrome = "1.0"
escape_string = "0.1"
unescape = "0.1"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0.0"
pretty_assertions = "1.4.0"
tempfile = "3.3.0"
insta = "1.45"
mdbook = "0.4"

[workspace]
members = [".", "xtask"]

[workspace.lints.clippy]
# Restrictions
unimplemented = "warn"
panic_in_result_fn = "warn"
panic = "warn"
todo = "warn"
# Pedantics without being too noisy
pedantic = { level = "warn", priority = -1 }
derive_partial_eq_without_eq = "allow"
enum_variant_names = "allow"
implicit_hasher = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"
